@@ -1,4 +1,4 @@
-.\" RCSid "$Id: obj2mesh.1,v 1.11 2008/11/10 19:08:17 greg Exp $"
+.\" RCSid "$Id: obj2mesh.1,v 1.12 2014/01/24 01:26:44 greg Exp $"
 .TH OBJ2MESH 1 03/11/03 RADIANCE
 .SH NAME
 obj2mesh - create a compiled RADIANCE mesh file from Wavefront .OBJ input
@@ -141,9 +141,6 @@ is the one before that, etc.
 An index of 0 may be used for the vertex texture or normal to
 indicate none, or these may be left off entirely.
 All faces will be broken into triangles in the final mesh.
-.I Obj2mesh
-currently makes an unsafe assumption that faces are convex,
-which may result in odd results if they are not.
 .PP
 All other statement types will be ignored on the input.
 Statements understood by
